<resources>
    <string name="app_name">Travenor</string>
    <string name="onboarding_1_title">Life is short and the\nworld is wide</string>

    <string name="onboarding_1_description">At  Friends tours and travel, we customize\nreliable and trutworthy educational tours to\ndestinations all over the world</string>
    <string name="onboarding_2_description">To get the best of your adventure you just\nneed to leave and go where you like, we are\nwaiting for you</string>
    <string name="onboarding_skip_btn">Skip</string>
    <string name="onboarding_get_started_btn">Get Started</string>
    <string name="survey_title">Let us know you</string>
    <string name="onboarding_next_btn">Next</string>
    <string name="splash_author">\@Hoàng Giang</string>
    <string name="survey_food_title">What food you like?</string>
    <string name="cave">Cave</string>
    <string name="beach">Beach</string>
    <string name="mountain">Mountain</string>
    <string name="survey_place_title">What you want to go?</string>
    <string name="asian_food">Asian food</string>
    <string name="fast_food">Fast food</string>
    <string name="european_food">European food</string>
    <string name="sea_food">Sea food</string>
    <string name="first_screen_title_html"><![CDATA[Life is short and the<br>world is <font color=\'#FF7029\'>wide</font>]]></string>
    <string name="second_page_html_title"><![CDATA[It\'s a big world out<br>there go <font color=\'#FF7029\'>explore</font>]]></string>
    <string name="third_page_html_title"><![CDATA[People don\'t take trips,<br>trips take <font color=\'#FF7029\'>people</font>]]></string>
    <string name="survey_page_html_title"><![CDATA[Let us know <font color=\'#FF7029\'>you</font>]]></string>
    <string name="first_page_description">At  Friends tours and travel, we customize\nreliable and trutworthy educational tours to\ndestinations all over the world</string>
    <string name="second_page_description">To get the best of your adventure you just\nneed to leave and go where you like, we are\nwaiting for you</string>
    <string name="third_page_description">To get the best of your adventure you just\n need to leave and go where you like, we are\n waiting for you</string>
    <string name="msg_save_survey_fail">Save user survey fail</string>

    <string name="menu_home_title">Home</string>
    <string name="menu_favorite_title">Favorite</string>
    <string name="menu_setting_title">Setting</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_nearby_title">Nearby</string>

    <string name="greeting_default_text">Good morning!</string>
    <string name="greeting_morning_text">Good morning!</string>
    <string name="greeting_afternoon_text">Good afternoon!</string>
    <string name="greeting_evening_text">Good evening!</string>
    <string name="home_screen_header_text">Explore the\nBeautiful world!</string>
    <string name="explore_view_all">View all</string>
    <string name="explore_attraction_title">Destination for you</string>
    <string name="explore_restaurant">How a restaurant?</string>
    <string name="explore_hotel_title">Need a hotel?</string>
    <string name="card_place_title">Vịnh Hạ Long</string>
    <string name="card_place_rating">4.7</string>
    <string name="card_place_address">Tp. Hạ Long, Quảng Ninh</string>
    <string name="detail_title">Detail</string>
    <string name="default_place_desc">Vịnh Hạ Long có diện tích 1.553 km vuông bao gồm 1.900 hòn đảo đá vôi lớn nhỏ với hình thù sinh VNĐ. Vịnh đã nhiều lần được UNESCO vinh danh là kỳ quan thiên nhiên thế giới và là điểm du lịch không thể bỏ qua.</string>
    <string name="detail_about_destination">About Destination</string>
    <string name="detail_button_more_detail">More Detail</string>
    <string name="detail_get_detail_fail_toast">Cannot get Place detail</string>
    <string name="more_detail_description_label">Description</string>
    <string name="more_detail_label_gallery">Gallery photos</string>
    <string name="more_detail_label_nearby_hotel">Nearby hotel</string>
    <string name="more_detail_label_nearby_restaurant">Nearby restaurant</string>

    <string name="no_place_notice_text">No favorite Place.\n Waiting for your awesome places.</string>
    <string name="favorite_title">Your favorite</string>
    <string name="search_screen_title">Search a place</string>
    <string name="search_recent_text">Recent</string>
    <string name="search_result_label">Result</string>
    <string name="search_no_result">No result</string>
    <string name="search_hint">Search places</string>
    <string name="title_activity_nearby">NearbyActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
