<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_bottom_home"
        android:enabled="true"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home_title"
        />

    <item
        android:id="@+id/menu_bottom_nearby"
        android:enabled="true"
        android:icon="@drawable/ic_menu_nearby"
        android:title="@string/menu_nearby_title"
        />

    <item
        android:id="@+id/menu_bottom_search"
        android:enabled="true"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/menu_bottom_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_menu_favorite"
        android:title="@string/menu_favorite_title"
        />

    <item
        android:id="@+id/menu_bottom_setting"
        android:enabled="true"
        android:icon="@drawable/ic_menu_setting"
        android:title="@string/menu_setting_title"
        />

</menu>