<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/dp_24"
    app:cardElevation="@dimen/dp_3"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/button_mark_favorite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="@drawable/button_mark_favorite_bg"
            android:elevation="@dimen/dp_8"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_mark_favorite"
            app:layout_constraintEnd_toEndOf="@id/card_image_thumbnail"
            app:layout_constraintTop_toTopOf="@id/card_image_thumbnail" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_image_thumbnail"
            android:layout_width="@dimen/dp_240"
            android:layout_height="@dimen/dp_260"
            android:layout_margin="@dimen/dp_16"
            app:cardCornerRadius="@dimen/dp_24"
            app:cardElevation="@dimen/dp_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_thumbnail_place"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_vinh_ha_long" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_place_title"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_8"
            android:ellipsize="end"
            android:gravity="start|top"
            android:lines="2"
            android:text="@string/card_place_title"
            android:textAppearance="@style/Theme.Androidtemplate.TextAppearance.Medium"
            app:layout_constraintEnd_toStartOf="@id/text_place_rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_image_thumbnail" />

        <TextView
            android:id="@+id/text_place_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/card_place_rating"
            android:textAppearance="@style/Theme.Androidtemplate.TextAppearance.Medium"
            app:drawableStartCompat="@drawable/ic_star"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_image_thumbnail" />

        <TextView
            android:id="@+id/text_place_address"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:ellipsize="end"
            android:lines="2"
            android:text="@string/card_place_address"
            android:textAppearance="@style/Theme.Androidtemplate.TextAppearance.Body"
            android:textSize="@dimen/sp_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_place_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
